--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,7 +38,7 @@ jobs:
       id: timestamp
       env:
         TZ: Europe/Amsterdam
-      run: echo "timestamp=$(date +'Planetiles-%Y-%m-%dT%H-%M-%S')" >> $GITHUB_OUTPUT
+      run: echo "timestamp=$(date +'onebusaway-gtfs-modules-%Y-%m-%dT%H-%M-%S')" >> $GITHUB_OUTPUT
         
     - name: Release new graph
       uses: ncipollo/release-action@v1      
